fix spacing on mobile

--- a/index.css
+++ b/index.css
@@ -20,9 +20,5 @@ li {
   list-style-type:none;
 }
 body {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  margin: 0;
-  min-height: 100vh;
 }
